engine/codex-rs/tui/src/app/snapshots/codex_tui__app__agents_overview__tests__older_server_notice_is_visible_in_agents_overview.snap
---
source: tui/src/app/agents_overview_tests.rs
expression: "rendered.lines().find(|line| line.contains(\"Service v0.153.0\") ||\nline.contains(\"Service v0.152.1\")).unwrap()"
---
  Service v0.152.1 < Codex CLI v0.153.0
